@@ -1,0 +1,30 @@
+# Generated by Django 4.2.23 on 2025-06-30 21:38
+
+from django.db import migrations
+
+def add_missing_defaults(apps, schema_editor):
+    frontend_model = apps.get_model("services", "frontend")
+    db_alias = schema_editor.connection.alias
+    frontends = frontend_model.objects.using(db_alias)
+
+    for frontend in frontends:
+        for field, default in [
+            ('cisco_umbrella_managed_org_customers_id', list),
+            ('cisco_umbrella_managed_org_customers_tokens', dict),
+            ('beyondtrust_reportings_api_token', dict),
+            ('ubika_namespaces', list),
+            ]:
+            if not getattr(frontend, field):
+                setattr(frontend, field, default())
+        frontend.save()
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('services', '0086_frontend_sentinel_one_identity_graph_console_url_and_more'),
+    ]
+
+    operations = [
+        migrations.RunPython(add_missing_defaults, migrations.RunPython.noop),
+    ]
