@@ -8,6 +8,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [Unreleased]
 ### Fixed
 - [API] [X509CERTIFICATE] AssertionError on non-existent certificate
+- [MIGRATIONS] Set missing default values for complex fields in Frontends
 
 
 ## [2.28.0] - 2025-06-26
